snapshots/syntax/library/functions/graphics/qbcolor/qbcolor_line_method.snap
---
source: vb6parse/src/syntax/library/functions/graphics/qbcolor.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: CallStatement
      children:
        - kind: Identifier
          text: Picture1
        - kind: PeriodOperator
          text: "."
        - kind: LineKeyword
          text: Line
        - kind: Whitespace
          text: " "
        - kind: LeftParenthesis
          text: (
        - kind: ArgumentList
          children:
            - kind: Argument
              children:
                - kind: NumericLiteralExpression
                  children:
                    - kind: IntegerLiteral
                      text: "0"
            - kind: Comma
              text: ","
            - kind: Whitespace
              text: " "
            - kind: Argument
              children:
                - kind: NumericLiteralExpression
                  children:
                    - kind: IntegerLiteral
                      text: "0"
        - kind: RightParenthesis
          text: )
    - kind: Unknown
      text: "-"
    - kind: Unknown
      text: (
    - kind: Unknown
      text: "100"
    - kind: Unknown
      text: ","
    - kind: Whitespace
      text: " "
    - kind: Unknown
      text: "100"
    - kind: Unknown
      text: )
    - kind: Unknown
      text: ","
    - kind: Whitespace
      text: " "
    - kind: CallStatement
      children:
        - kind: Identifier
          text: QBColor
        - kind: LeftParenthesis
          text: (
        - kind: ArgumentList
          children:
            - kind: Argument
              children:
                - kind: NumericLiteralExpression
                  children:
                    - kind: IntegerLiteral
                      text: "12"
        - kind: RightParenthesis
          text: )
    - kind: Unknown
      text: ","
    - kind: Whitespace
      text: " "
    - kind: CallStatement
      children:
        - kind: Identifier
          text: BF
        - kind: Newline
          text: "\n"
